add user and login functionality

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -14,7 +14,7 @@
 
   <p>
     <% room.messages.each do |message| %>
-      <div><%= message.content %><div/>
+      <div><%= message.user.username %>: <%= message.content %><div/>
     <% end %>
   </p>
 
