--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,13 @@
       <%= link_to 'Chat rooms', rooms_path %>
       <%= link_to 'Create new chat room', new_room_path %>
       <% if current_user %>
-        <%= link_to current_user.username, current_user %>
+        <%= current_user.username %> signed in
         <%= link_to "Log out", session_path, data: { "turbo-method": :delete }, class: "link-secondary smooth" %>
       <% else %>
         <%= link_to 'Sign up', new_user_path %>
         <%= link_to 'Log in', new_session_path %>
       <% end %>
     </div>
-    <% if current_user %>
-      <p><%= current_user.username %> signed in</p>
-    <% end %>
     <%= yield %>
   <script src="/assets/jquery.js" type="text/javascript"></script>
   <%= javascript_include_tag 'rails_emoji_picker' %>
