--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,5 @@
-<h1>New user</h1>
+<h1>Create account</h1>
 
 <%= render "form", user: @user %>
 
-<br>
 
-<div>
-  <%= link_to "Back to users", users_path %>
-</div>
