--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,21 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <div class="navibar">
+  <body style="background-color:yellow;">
+    <div class="ps-5 pt-3 pb-3" style="background-color:greenyellow;">
       <%= link_to 'Chat rooms', rooms_path %>
       <%= link_to 'Create new chat room', new_room_path %>
       <% if current_user %>
         <%= current_user.username %> signed in
-        <%= link_to "Log out", session_path, data: { "turbo-method": :delete }, class: "link-secondary smooth" %>
+        <%= link_to "Log out", signout_path, data: { "turbo-method": :delete } %>
       <% else %>
         <%= link_to 'Sign up', new_user_path %>
         <%= link_to 'Log in', new_session_path %>
       <% end %>
     </div>
+    <div class="ps-5">
     <%= yield %>
+    </div>
   <script src="/assets/jquery.js" type="text/javascript"></script>
   <%= javascript_include_tag 'rails_emoji_picker' %>
   </body>
