--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -11,11 +11,12 @@
     <br/>
     <%= form.submit "New message" %>
   <% end %>
-
-  <p>
-    <% room.messages.each do |message| %>
-      <div><%= message.user.username %>: <%= content_with_emoji(message.content) %><div/>
+  <br>
+  <div style="height:500px;width:500px;border-width:5px; border-style:solid; border-color:#9ACD32;overflow:auto;display: flex;flex-direction: column-reverse;">
+    <% room.messages.reverse.each do |message| %>
+      <div><%= message.user.username %>: <%= content_with_emoji(message.content) %></div>
     <% end %>
-  </p>
+  </div>
+  <br>
 
 </div>
